correct config.json.erb

--- a/jobs/consumer/templates/config.json.erb
+++ b/jobs/consumer/templates/config.json.erb
@@ -5,5 +5,5 @@
   "DopplerAddr": "<%= p('consumer.doppler_addr') %>",
   "InsecureSSLSkipVerify": <%= p('consumer.skip_ssl') %>,
   "FirehoseSubscriptionId": "<%= p('consumer.firehose_subscription_id') %>",
-  "OriginID": "<%= p('consumer.origin_id') %>""
+  "OriginID": "<%= p('consumer.origin_id') %>"
 }
